--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,10 @@
   "description": "This extension creates hover-over footnote links in 538.",
   "version": "0.1",
 
+  "icons": { "16": "icon16.png",
+             "48": "icon48.png",
+             "128": "icon128.png" },
+
   "content_scripts": [
     {
       "matches": ["*://fivethirtyeight.com/*"],
